# rust-flix

./: .env  Cargo.toml  makefile  readme.md
migrations/2022-08-17-175854_videos/: up.sql
migrations/2022-08-17-194642_users/: down.sql  up.sql
migrations/2022-08-17-194649_views/: down.sql  up.sql
src/models/: mod.rs
